# PCA-C

./: README.md  pyproject.toml
c++/: main.cc  pca.cc  pca.hpp  pca_calc
tests/: test.py  test_pca.py
