[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "PCA-C"
version = "0.1.0"
description = "PCA calculator"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "pytest",
    "scikit-learn",
    "numpy",
]

[tool.pytest.ini_options]
pythonpath = ["."]
addopts = "-ra"